--- a/front-end/package.json
+++ b/front-end/package.json
@@ -31,6 +31,7 @@
     "jsx-loader": "^0.13.2",
     "node-libs-browser": "1.0.0",
     "react": "15.0.1",
+    "react-bootstrap": "^0.29.5",
     "react-datagrid": "^2.1.1",
     "react-dom": "15.0.1",
     "react-redux": "^4.4.5",
