--- a/front-end/package.json
+++ b/front-end/package.json
@@ -24,20 +24,22 @@
   "homepage": "https://github.com/alicoding/maintenance-log",
   "dependencies": {
     "bootstrap": "3.3.5",
-    "isomorphic-fetch": "^2.2.1",
-    "json-loader": "^0.5.4",
-    "json5": "^0.5.0",
-    "json5-loader": "^0.6.0",
-    "jsx-loader": "^0.13.2",
+    "isomorphic-fetch": "2.2.1",
+    "json-loader": "0.5.4",
+    "json5": "0.5.0",
+    "json5-loader": "0.6.0",
+    "jsx-loader": "0.13.2",
     "node-libs-browser": "1.0.0",
     "react": "15.0.1",
-    "react-bootstrap": "^0.29.5",
-    "react-datagrid": "^2.1.1",
+    "react-addons-update": "15.0.1",
+    "react-bootstrap": "0.29.5",
+    "react-bootstrap-table": "2.3.6",
     "react-dom": "15.0.1",
-    "react-redux": "^4.4.5",
-    "redux": "^3.5.2",
-    "redux-logger": "^2.6.1",
-    "redux-thunk": "^2.1.0"
+    "react-redux": "4.4.5",
+    "react-toastr": "2.6.2",
+    "redux": "3.5.2",
+    "redux-logger": "2.6.1",
+    "redux-thunk": "2.1.0"
   },
   "devDependencies": {
     "babel-core": "6.7.7",
