--- a/.editorconfig
+++ b/.editorconfig
@@ -18,7 +18,7 @@ indent_size = 4
 
 # Javascript specific:
 [*.{js,jsx,json}]
-indent_style = tab
+indent_style = space
 indent_size = 2
 
 # HTML / CSS specific:
@@ -27,4 +27,8 @@ indent_style = tab
 indent_size = 4
 
 [Vagrantfile]
+indent_size = 2
+
+[.eslintrc]
+indent_style = space
 indent_size = 2
