--- a/front-end/package.json
+++ b/front-end/package.json
@@ -36,6 +36,8 @@
     "react-bootstrap-table": "2.3.6",
     "react-dom": "15.0.1",
     "react-redux": "4.4.5",
+    "react-router": "2.6.0",
+    "react-router-redux": "^4.0.5",
     "react-toastr": "2.6.2",
     "redux": "3.5.2",
     "redux-logger": "2.6.1",
@@ -43,12 +45,20 @@
   },
   "devDependencies": {
     "babel-core": "6.7.7",
+    "babel-eslint": "^6.1.2",
     "babel-loader": "6.2.4",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "0.23.1",
+    "eslint": "^3.2.2",
+    "eslint-config-airbnb": "^10.0.0",
+    "eslint-import-resolver-webpack": "^0.4.0",
+    "eslint-plugin-import": "^1.12.0",
+    "eslint-plugin-jsx-a11y": "^2.0.1",
+    "eslint-plugin-react": "^6.0.0",
     "file-loader": "0.8.5",
     "react-hot-loader": "1.3.0",
     "style-loader": "0.13.1",
