--- a/front-end/package.json
+++ b/front-end/package.json
@@ -29,9 +29,11 @@
     "json5": "0.5.0",
     "json5-loader": "0.6.0",
     "jsx-loader": "0.13.2",
+    "moment": "^2.15.1",
     "node-libs-browser": "1.0.0",
     "react": "15.0.1",
     "react-addons-update": "15.0.1",
+    "react-big-calendar": "^0.11.0",
     "react-bootstrap": "0.29.5",
     "react-bootstrap-table": "2.3.6",
     "react-dom": "15.0.1",
