--- a/front-end/package.json
+++ b/front-end/package.json
@@ -39,6 +39,7 @@
     "react-dom": "15.0.1",
     "react-redux": "4.4.5",
     "react-router": "2.6.0",
+    "react-router-bootstrap": "^0.23.1",
     "react-router-redux": "^4.0.5",
     "react-toastr": "2.6.2",
     "redux": "3.5.2",
