--- a/front-end/package.json
+++ b/front-end/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/zachmassia/maintenance-log",
   "dependencies": {
     "bootstrap": "3.3.5",
+    "bootswatch": "^3.3.7",
     "isomorphic-fetch": "2.2.1",
     "json-loader": "0.5.4",
     "json5": "0.5.0",
@@ -63,6 +64,8 @@
     "eslint-plugin-jsx-a11y": "^2.0.1",
     "eslint-plugin-react": "^6.0.0",
     "file-loader": "0.8.5",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "react-hot-loader": "1.3.0",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
