--- a/front-end/.eslintrc
+++ b/front-end/.eslintrc
@@ -9,7 +9,8 @@
     "comma-dangle": 0,
     "no-use-before-define": 0,
     "react/jsx-no-bind": 0,
-    "react/prefer-stateless-function": 0
+    "react/prefer-stateless-function": 0,
+    "linebreak-style": 0
   },
   "plugins": [
     "import",
