--- a/front-end/package.json
+++ b/front-end/package.json
@@ -42,6 +42,7 @@
     "react-router": "2.6.0",
     "react-router-bootstrap": "^0.23.1",
     "react-router-redux": "^4.0.5",
+    "react-search-input": "^0.10.3",
     "react-toastr": "2.6.2",
     "redux": "3.5.2",
     "redux-logger": "2.6.1",
