Install redux-saga; Include eslint plugin

--- a/front-end/.eslintrc
+++ b/front-end/.eslintrc
@@ -14,7 +14,8 @@
   },
   "plugins": [
     "import",
-    "react"
+    "react",
+    "redux-saga"
   ],
   "settings": {
     "import/resolver": "webpack"
