--- a/front-end/package.json
+++ b/front-end/package.json
@@ -45,6 +45,7 @@
     "react-toastr": "2.6.2",
     "redux": "3.5.2",
     "redux-logger": "2.6.1",
+    "redux-saga": "^0.13.0",
     "redux-thunk": "2.1.0"
   },
   "devDependencies": {
@@ -63,6 +64,7 @@
     "eslint-plugin-import": "^1.12.0",
     "eslint-plugin-jsx-a11y": "^2.0.1",
     "eslint-plugin-react": "^6.0.0",
+    "eslint-plugin-redux-saga": "^0.3.0",
     "file-loader": "0.8.5",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
