Add calibration file parser

--- a/back-end/serverconfig-default.ini
+++ b/back-end/serverconfig-default.ini
@@ -1,5 +1,6 @@
 [file_paths]
 //maint_excel_path = G:\\Garage\\Maintenance Schedule.xlsm
+//cal_excel_path   = G:\\Garage\\calibration certificates\\calibrations.xlsx
 //db_path          = G:\\Garage\\maintenance_database.db
 
 [settings]
