--- a/front-end/package.json
+++ b/front-end/package.json
@@ -30,6 +30,7 @@
     "json5": "0.5.0",
     "json5-loader": "0.6.0",
     "jsx-loader": "0.13.2",
+    "key-mirror": "^1.0.1",
     "moment": "^2.15.1",
     "node-libs-browser": "1.0.0",
     "react": "15.0.1",
@@ -46,7 +47,9 @@
     "redux": "3.5.2",
     "redux-logger": "2.6.1",
     "redux-saga": "^0.13.0",
-    "redux-thunk": "2.1.0"
+    "reselect": "^2.5.4",
+    "restful.js": "^0.9.6",
+    "taffy": "^2.6.2"
   },
   "devDependencies": {
     "babel-core": "6.7.7",
