--- a/front-end/package.json
+++ b/front-end/package.json
@@ -23,58 +23,61 @@
   },
   "homepage": "https://github.com/zachmassia/maintenance-log",
   "dependencies": {
-    "bootstrap": "3.3.5",
-    "bootswatch": "^3.3.7",
-    "isomorphic-fetch": "2.2.1",
-    "json-loader": "0.5.4",
-    "json5": "0.5.0",
-    "json5-loader": "0.6.0",
-    "jsx-loader": "0.13.2",
-    "key-mirror": "^1.0.1",
-    "moment": "^2.15.1",
-    "node-libs-browser": "1.0.0",
-    "react": "15.0.1",
-    "react-addons-update": "15.0.1",
-    "react-big-calendar": "^0.11.0",
-    "react-bootstrap": "0.29.5",
-    "react-bootstrap-table": "2.3.6",
-    "react-dom": "15.0.1",
-    "react-redux": "4.4.5",
-    "react-router": "2.6.0",
-    "react-router-bootstrap": "^0.23.1",
-    "react-router-redux": "^4.0.5",
-    "react-toastr": "2.6.2",
-    "redux": "3.5.2",
-    "redux-logger": "2.6.1",
-    "redux-saga": "^0.13.0",
-    "reselect": "^2.5.4",
-    "restful.js": "^0.9.6",
-    "taffy": "^2.6.2"
+    "bootstrap": "~3.3.7",
+    "bootswatch": "~3.3.7",
+    "eslint": "^3.14.1",
+    "eslint-config-airbnb": "^14.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-react": "^6.9.0",
+    "isomorphic-fetch": "~2.2.1",
+    "json-loader": "~0.5.4",
+    "json5": "~0.5.1",
+    "jsx-loader": "~0.13.2",
+    "key-mirror": "~1.0.1",
+    "moment": "~2.17.1",
+    "node-libs-browser": "~2.0.0",
+    "react": "~15.4.2",
+    "react-addons-update": "~15.4.2",
+    "react-big-calendar": "~0.12.3",
+    "react-bootstrap": "~0.30.7",
+    "react-bootstrap-table": "~2.10.0",
+    "react-dom": "~15.4.2",
+    "react-redux": "~5.0.2",
+    "react-router": "~3.0.2",
+    "react-router-bootstrap": "~0.23.1",
+    "react-router-redux": "~4.0.7",
+    "react-toastr": "~2.8.2",
+    "redux": "~3.6.0",
+    "redux-logger": "~2.7.4",
+    "redux-saga": "~0.14.3",
+    "reselect": "~2.5.4",
+    "restful.js": "~0.9.6",
+    "taffy": "~2.6.2"
   },
   "devDependencies": {
-    "babel-core": "6.7.7",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "6.2.4",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "6.6.0",
-    "babel-preset-react": "6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "copy-webpack-plugin": "^3.0.1",
-    "css-loader": "0.23.1",
-    "eslint": "^3.2.2",
-    "eslint-config-airbnb": "^10.0.0",
-    "eslint-import-resolver-webpack": "^0.4.0",
-    "eslint-plugin-import": "^1.12.0",
-    "eslint-plugin-jsx-a11y": "^2.0.1",
-    "eslint-plugin-react": "^6.0.0",
+    "babel-core": "~6.22.1",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "~6.2.10",
+    "babel-polyfill": "~6.22",
+    "babel-preset-es2015": "~6.22",
+    "babel-preset-react": "~6.22",
+    "babel-preset-stage-0": "~6.22",
+    "copy-webpack-plugin": "~4.0.1",
+    "css-loader": "~0.26.1",
+    "eslint": "^3.14.1",
+    "eslint-import-resolver-webpack": "^0.8.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-react": "^6.9.0",
     "eslint-plugin-redux-saga": "^0.3.0",
-    "file-loader": "0.8.5",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
-    "react-hot-loader": "1.3.0",
+    "file-loader": "~0.9.0",
+    "less": "~2.7.2",
+    "less-loader": "~2.2.3",
+    "react-hot-loader": "~1.3.1",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
-    "webpack": "1.13.0",
-    "webpack-dev-server": "1.14.1"
+    "webpack": "~1.14.0",
+    "webpack-dev-server": "~1.16.2"
   }
 }
