--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,7 +5,8 @@
   "main": "''",
   "scripts": {
     "build": "NODE_ENV=production webpack -p --config webpack.production.config.js --progress --profile --colors",
-    "dev": "webpack-dev-server --progress --profile --colors --hot --host 0.0.0.0 --port 5001"
+    "dev": "webpack-dev-server --progress --profile --colors --hot --host 0.0.0.0 --port 5001",
+    "lint": "eslint --ext .js,.jsx src/; exit 0"
   },
   "repository": {
     "type": "git",
