--- a/front-end/.eslintrc
+++ b/front-end/.eslintrc
@@ -10,7 +10,8 @@
     "no-use-before-define": 0,
     "react/jsx-no-bind": 0,
     "react/prefer-stateless-function": 0,
-    "linebreak-style": 0
+    "linebreak-style": 0,
+    "react/forbid-prop-types": 0
   },
   "plugins": [
     "import",
