--- a/front-end/package.json
+++ b/front-end/package.json
@@ -49,6 +49,7 @@
     "react-router-bootstrap": "~0.23.1",
     "react-router-redux": "~4.0.7",
     "react-toastr": "~2.8.2",
+    "recharts": "^0.21.2",
     "redux": "~3.6.0",
     "redux-logger": "~2.7.4",
     "redux-saga": "~0.14.3",
