--- a/front-end/.eslintrc
+++ b/front-end/.eslintrc
@@ -11,7 +11,8 @@
     "react/jsx-no-bind": 0,
     "react/prefer-stateless-function": 0,
     "linebreak-style": 0,
-    "react/forbid-prop-types": 0
+    "react/forbid-prop-types": 0,
+    "camelcase": 0
   },
   "plugins": [
     "import",
