--- a/front-end/package.json
+++ b/front-end/package.json
@@ -37,6 +37,7 @@
     "jsx-loader": "~0.13.2",
     "key-mirror": "~1.0.1",
     "moment": "~2.17.1",
+    "moment-range": "^3.0.3",
     "node-libs-browser": "~2.0.0",
     "react": "~15.4.2",
     "react-addons-update": "~15.4.2",
