--- a/front-end/.eslintrc
+++ b/front-end/.eslintrc
@@ -12,7 +12,8 @@
     "react/prefer-stateless-function": 0,
     "linebreak-style": 0,
     "react/forbid-prop-types": 0,
-    "camelcase": 0
+    "camelcase": 0,
+    "jsx-a11y/no-static-element-interactions": 0
   },
   "plugins": [
     "import",
